Find my age app :koala:

--- a/HelloWorldKotlin/app/src/main/res/values/strings.xml
+++ b/HelloWorldKotlin/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">HelloWorldKotlin</string>
+    <string name="app_name">Find my age app </string>
 </resources>
