--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">CryptoTracker</string>
     <string name="coinName">Coin name</string>
     <string name="coinID">coinID</string>
+    <string name="contentDescriptionCryptoCoin">Cryptocurrency image</string>
 </resources>
