--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="dolar_symbol">$</string>
     <string name="changeHours">24h: </string>
     <string name="changeWeek">7d:</string>
+    <string name="_1000000">1000000</string>
 </resources>
